# AnimLab

./: .gitignore  Cargo.toml  package-lock.json  package.json
src-core/: Cargo.toml
src-core/src/: Math.rs  command.rs  graph.rs  lib.rs  renderer.rs  settings.rs  shader.wgsl  stroke.rs
src-core/src/geometry/: boolean.rs  mod.rs  spline.rs  tessellator.rs
src-core/src/operations/: exposure.rs  layers.rs  mod.rs  selection.rs
src-core/src/tools/: brush.rs  cutter.rs  eraser.rs  mod.rs  pencil.rs  select.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-ui/: index.html  package.json  vite.config.ts
src-ui/src/: App.tsx  main.tsx
src-ui/src/components/: CanvasViewport.tsx  ContextMenu.tsx  LayerModals.tsx  LayerPropertiesPanel.tsx  PropertiesPanel.tsx  TimelinePanel.tsx
src-ui/src/engine_bridge/: InputManager.ts  TimelineInteractionController.ts
src-ui/src/store/: PreferencesStore.ts  shortcutStore.ts  uiStore.ts
src-ui/src/workspace/: defaultLayout.ts
