[package]
name = "animlab-core"
version = "0.1.0"
edition = "2024"
description = "High-performance WebAssembly rendering core for AnimLab"
authors = ["AnimLab Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
log = "0.4.20"
console_log = "1.0.0"
wgpu = { version = "28.0", features = ["webgl"] }
wasm-bindgen-futures = "0.4.42"
bytemuck = { version = "1.15", features = ["derive"] }
lazy_static = "1.4.0"

geo = "0.23"
lyon_tessellation = "1.0"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O", 
    "--enable-bulk-memory", 
    "--enable-nontrapping-float-to-int",
    "--enable-reference-types",
    "--enable-simd"
]